<resources>
    <string name="app_name">方向压铸检验程序</string>
    <string name="jcz">检测值:</string>
    <string name="jzz">基准值:</string>
    <string name="jcx">检测选项:</string>
    <string name="CheckBox1">Ematrix号版本号色号检测</string>
    <string name="CheckBox2">日期模号流水号检测</string>
    <string name="del">清零</string>
    <string name="result">检测成功</string>
    <string name="optitemdis">通过</string>
    <string name="optseqdis">未通过</string>
    <string name="count">0</string>
</resources>